--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <p>
                         If you are in search of a reputable Frontend developer with
                         track record to developer your website/web applications, you’re in the right place.
-                        <a href="https://wa.link/rni29z"><span class="yellow-p">Get in touch with Me</span></a> <span class="yellow-p">and discuss your needs nows</span> 
+                        <a href="https://wa.link/rni29z"><span class="yellow-p">Get in touch with Me</span></a> <span class="yellow-p">and discuss your needs now</span> 
                     </p>
                     <p>
                         I am <span class="yellow-pin">Francis Okorie</span>, one of the Frontend Engineer of <a href=""><span class="works">Trezon Technologies</span></a> a big tech company in Nigeria.
