--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="about-content-text">
                     <p>
                         If you are in search of a reputable Frontend developer with
-                        track record to developer your website/web applications, you’re in the right place.
+                        track record to develope your website/web applications, you’re in the right place.
                         <a href="https://wa.link/rni29z"><span class="yellow-p">Get in touch with Me</span></a> <span class="yellow-p">and discuss your needs now</span> 
                     </p>
                     <p>
